# mmogit-visitor-book

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CNAME  MIGRATION_CHECKLIST.md  PUBLIC_INFRASTRUCTURE.md  README.md  deploy.sh  index.html
api/src/: main.rs
wasm/: mmogit_wasm.d.ts  mmogit_wasm.js  mmogit_wasm_bg.wasm
web-visitor-book/api/: .gitignore  Cargo.toml  README.md  nginx-visitor-book.conf  visitor-book.service
web-visitor-book/api/src/: main.rs
web-visitor-book/wasm/: mmogit_wasm_bg.wasm.d.ts  package.json
web-visitor-book/worker/: README.md  package-lock.json
worker/: README.md  cloudflare-worker.js  package.json  wrangler.toml
